--- a/index.html
+++ b/index.html
@@ -4,10 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <title>Erika's Portfolio</title>
 </head>
 <body>
-    <h1>Here I am!</h1>
+    <header>
+        <h1>Erika Nordman</h1>
+
+        <h2>Design Portfolio</h2>
+
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+            <li>Linkdin</li>
+        </ul>
+    </header>
+
+    <section>
+        <article>
+            <h3>UI/UX Design</h3>
+        </article>
+
+        <article>
+            <h3>Code Design</h3>
+        </article>
+
+        <article>
+            <h3>Illustration</h3>
+        </article>
+
+        <article>
+            <h3>Branding</h3>
+        </article>
+
+        <article>
+            <h3>Typography</h3>
+        </article>
+
+        <article>
+            <h3>Graphic Design</h3>
+        </article>
+    </section>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
