--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <i id="icon" class="fa-solid fa-bars"></i>
         <ul>
             <li><a  id="link1" href="#">Home</a></li>
-            <li><a  id="link2" href="#">About</a></li>
-            <li><a  id="link3" href="#">Favorites</a></li>
+            <li><a  id="link2" href="about/index.html">About</a></li>
+            <li><a  id="link3" href="favorites/index.html">Favorites</a></li>
             <li><a  id="link4"href="#">Contact</a></li>
         </ul>
     </div>
@@ -33,7 +33,7 @@
         <img id="picture" src="/images/profile.jpeg" alt="My Profile Picture">
         <h1>Hi! I'm Erika</h1>
         <h2>Welcome to my portfolio</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam nam est provident saepe reiciendis aut, blanditiis quasi accusantium doloremque libero id voluptate laudantium, corrupti aspernatur accusamus laboriosam eius autem? Ducimus.</p>
+        <p>I am a designer. I work with Adobe Illustrator, Photoshop, InDesign, HTML, CSS, JavaScript, Visual Studio Code and Figma. I have experience with typography, branding, product design, logo design, website design, app design, and human centered design!</p>
 
     </header>
 
