ampage icon update

--- a/projects/nextDoorShopper.html
+++ b/projects/nextDoorShopper.html
@@ -172,7 +172,10 @@
           <div id="firstGalleryButton" class="PPgalleryOption">
             <p><i>Gallery View</i></p>
             <button id="galleryButton1" class="PPgalleryMode">
-              <span class="material-symbols-outlined"> imagesmode </span>
+              <img
+                src="../images/galleryIcon.png"
+                alt="Gallery"
+              />
             </button>
           </div>
         </div>
@@ -218,8 +221,8 @@
             <p class="galleryViewTextHide"><i>Gallery View</i></p>
             <button id="galleryButton2" class="PPgalleryMode">
               <img
-                src="../images/behanceLogo.png"
-                alt="Behance"
+                src="../images/galleryIcon.png"
+                alt="Gallery"
                 class="galleryModeButton"
               />
             </button>
@@ -253,8 +256,8 @@
             <p class="galleryViewTextHide"><i>Gallery View</i></p>
             <button id="galleryButton3" class="PPgalleryMode">
               <img
-                src="../images/behanceLogo.png"
-                alt="Behance"
+                src="../images/galleryIcon.png"
+                alt="Gallery"
                 class="galleryModeButton"
               />
             </button>
@@ -272,8 +275,8 @@
             <p class="galleryViewTextHide"><i>Gallery View</i></p>
             <button id="galleryButton4" class="PPgalleryMode">
               <img
-                src="../images/behanceLogo.png"
-                alt="Behance"
+                src="../images/galleryIcon.png"
+                alt="Gallery"
                 class="galleryModeButton"
               />
             </button>
@@ -291,8 +294,8 @@
             <p class="galleryViewTextHide"><i>Gallery View</i></p>
             <button id="galleryButton5" class="PPgalleryMode">
               <img
-                src="../images/behanceLogo.png"
-                alt="Behance"
+                src="../images/galleryIcon.png"
+                alt="Gallery"
                 class="galleryModeButton"
               />
             </button>
