--- a/projects/nextDoorShopper.html
+++ b/projects/nextDoorShopper.html
@@ -174,7 +174,7 @@
             <button id="galleryButton1" class="PPgalleryMode">
               <img
                 src="../images/galleryIcon.png"
-                alt="Gallery"
+                alt="Gallery" class="galleryModeButton"
               />
             </button>
           </div>
@@ -228,22 +228,23 @@
             </button>
           </div>
         </div>
-
-        <h3>Process</h3>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-          consectetur magni ipsam eos incidunt, maxime nostrum modi recusandae,
-          optio quod possimus eligendi exercitationem temporibus earum molestias
-          mollitia repellendus unde nemo? Error ad ipsam illum, natus quo
-          tempora voluptatibus, esse expedita adipisci repudiandae placeat aut
-          magni quia atque dolor modi magnam eos dicta qui vel! Alias hic
-          recusandae accusantium quae excepturi nemo perspiciatis! Omnis,
-          adipisci consequatur? Perferendis dolores expedita explicabo quos
-          natus accusantium deleniti aut dolore veniam modi aperiam consectetur
-          eaque, illo hic incidunt, alias architecto animi et eveniet. Quas
-          perspiciatis eaque eligendi, illum temporibus quod labore! Non
-          reprehenderit est eos.
-        </p>
+        <div id="processText">
+          <h3>Process</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            consectetur magni ipsam eos incidunt, maxime nostrum modi recusandae,
+            optio quod possimus eligendi exercitationem temporibus earum molestias
+            mollitia repellendus unde nemo? Error ad ipsam illum, natus quo
+            tempora voluptatibus, esse expedita adipisci repudiandae placeat aut
+            magni quia atque dolor modi magnam eos dicta qui vel! Alias hic
+            recusandae accusantium quae excepturi nemo perspiciatis! Omnis,
+            adipisci consequatur? Perferendis dolores expedita explicabo quos
+            natus accusantium deleniti aut dolore veniam modi aperiam consectetur
+            eaque, illo hic incidunt, alias architecto animi et eveniet. Quas
+            perspiciatis eaque eligendi, illum temporibus quod labore! Non
+            reprehenderit est eos.
+          </p></div>
+        
 
         <div class="PPimageButtonContainer">
           <img
