--- a/projects/nextDoorShopper.html
+++ b/projects/nextDoorShopper.html
@@ -143,7 +143,7 @@
                   >
                 </li>
                 <li>
-                  <a href="documents/ENordmanResume.pdf" download
+                  <a href="../documents/ENordmanResume.pdf" download
                     ><div class="iconTextContainer">
                       <img
                         src="../images/resumeLogo.png"
