--- a/projects/wineLabels.html
+++ b/projects/wineLabels.html
@@ -131,7 +131,7 @@
                 </li>
                 <li>
                   <a
-                    href="&#101;&#046;&#110;&#111;&#114;&#100;&#109;&#097;&#110;&#048;&#048;&#049;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"
+                    href="mailto:&#101;&#046;&#110;&#111;&#114;&#100;&#109;&#097;&#110;&#048;&#048;&#049;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"
                     ><div class="iconTextContainer">
                       <img
                         src="../images/emailLogo.png"
