font fix and gallery mobile fix

--- a/projects/nextDoorShopper.html
+++ b/projects/nextDoorShopper.html
@@ -10,6 +10,11 @@
       content="Hello! My name is Erika and I am a product designer based in Sacramento"
     />
 
+    <script src="../script.js" defer></script>
+
+    <link rel="stylesheet" href="../mainStyles.css" />
+    <link rel="stylesheet" href="projectStyles.css" />
+
     <!-- fonts link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -35,10 +40,6 @@
 
     <title>Next Door Shopper</title>
 
-    <script src="../script.js" defer></script>
-
-    <link rel="stylesheet" href="../mainStyles.css" />
-    <link rel="stylesheet" href="projectStyles.css" />
   </head>
   <body id="theWholeThing">
     <div id="galleryView" class="hideAMGallery">
@@ -181,7 +182,7 @@
         </div>
 
         <h4>UI/UX Case Study</h4>
-        <h2>Next Door Shopper</h2>
+        <h2 id="PPMainTitle">Next Door Shopper</h2>
 
         <ul class="involvmentList">
           <h3>My Involvment</h3>
