--- a/projects/wineLabels.html
+++ b/projects/wineLabels.html
@@ -10,6 +10,11 @@
       content="Hello! My name is Erika and I am a product designer based in Sacramento"
     />
 
+    <script src="../script.js" defer></script>
+
+    <link rel="stylesheet" href="../mainStyles.css" />
+    <link rel="stylesheet" href="projectStyles.css" />
+    
     <!-- fonts link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -35,10 +40,7 @@
 
     <title>Wine Labels Project</title>
 
-    <script src="../script.js" defer></script>
-
-    <link rel="stylesheet" href="../mainStyles.css" />
-    <link rel="stylesheet" href="projectStyles.css" />
+   
   </head>
   <body id="theWholeThing">
     <div id="galleryView" class="hideAMGallery">
@@ -178,7 +180,7 @@
         </div>
 
         <h4>Product Design</h4>
-        <h2>Wine Labels</h2>
+        <h2 id="PPMainTitle">Wine Labels</h2>
 
         <ul class="involvmentList">
           <h3>My Involvment</h3>
