overflow fix for gallery mobile view

--- a/projects/flightMenuDesign.html
+++ b/projects/flightMenuDesign.html
@@ -222,8 +222,8 @@
             <p class="galleryViewTextHide"><i>Gallery View</i></p>
             <button id="galleryButton2" class="PPgalleryMode">
               <img
-                src="../images/behanceLogo.png"
-                alt="Behance"
+                src="../images/galleryIcon.png"
+                alt="Gallery"
                 class="galleryModeButton"
               />
             </button>
@@ -258,8 +258,8 @@
             <p class="galleryViewTextHide"><i>Gallery View</i></p>
             <button id="galleryButton3" class="PPgalleryMode">
               <img
-                src="../images/behanceLogo.png"
-                alt="Behance"
+                src="../images/galleryIcon.png"
+                alt="Gallery"
                 class="galleryModeButton"
               />
             </button>
@@ -277,8 +277,8 @@
             <p class="galleryViewTextHide"><i>Gallery View</i></p>
             <button id="galleryButton4" class="PPgalleryMode">
               <img
-                src="../images/behanceLogo.png"
-                alt="Behance"
+                src="../images/galleryIcon.png"
+                alt="Gallery"
                 class="galleryModeButton"
               />
             </button>
@@ -296,8 +296,8 @@
             <p class="galleryViewTextHide"><i>Gallery View</i></p>
             <button id="galleryButton5" class="PPgalleryMode">
               <img
-                src="../images/behanceLogo.png"
-                alt="Behance"
+                src="../images/galleryIcon.png"
+                alt="Gallery"
                 class="galleryModeButton"
               />
             </button>
