--- a/projects/subscriptionBox.html
+++ b/projects/subscriptionBox.html
@@ -174,7 +174,11 @@
           <div id="firstGalleryButton" class="PPgalleryOption">
             <p><i>Gallery View</i></p>
             <button id="galleryButton1" class="PPgalleryMode">
-              <span class="material-symbols-outlined"> imagesmode </span>
+              <img
+                src="../images/galleryIcon.png"
+                alt="Gallery"
+                class="galleryModeButton"
+              />
             </button>
           </div>
         </div>
@@ -222,8 +226,8 @@
             <p class="galleryViewTextHide"><i>Gallery View</i></p>
             <button id="galleryButton2" class="PPgalleryMode">
               <img
-                src="../images/behanceLogo.png"
-                alt="Behance"
+                src="../images/galleryIcon.png"
+                alt="Gallery"
                 class="galleryModeButton"
               />
             </button>
@@ -258,8 +262,8 @@
             <p class="galleryViewTextHide"><i>Gallery View</i></p>
             <button id="galleryButton3" class="PPgalleryMode">
               <img
-                src="../images/behanceLogo.png"
-                alt="Behance"
+                src="../images/galleryIcon.png"
+                alt="Gallery"
                 class="galleryModeButton"
               />
             </button>
@@ -277,8 +281,8 @@
             <p class="galleryViewTextHide"><i>Gallery View</i></p>
             <button id="galleryButton4" class="PPgalleryMode">
               <img
-                src="../images/behanceLogo.png"
-                alt="Behance"
+                src="../images/galleryIcon.png"
+                alt="Gallery"
                 class="galleryModeButton"
               />
             </button>
@@ -296,8 +300,8 @@
             <p class="galleryViewTextHide"><i>Gallery View</i></p>
             <button id="galleryButton5" class="PPgalleryMode">
               <img
-                src="../images/behanceLogo.png"
-                alt="Behance"
+                src="../images/galleryIcon.png"
+                alt="Gallery"
                 class="galleryModeButton"
               />
             </button>
